Fixing persisting issue on ios contact page where nav scroll anim is being triggered and giving scrollToTop arrow initial opacity of 0

--- a/src/scss/scrollToTopButton.scss
+++ b/src/scss/scrollToTopButton.scss
@@ -7,6 +7,7 @@
   width: 100px;
   margin-right: 1.5%;
   margin-bottom: 4%;
+  opacity: 0;
 }
 
 @media (min-width: 1199.99px) {
